# ai-generated-code-test

./: .gitignore  DOCKER.md  README.md  docker-compose.yml  domain.md  init-db.sql
.claude/: settings.local.json
.github/workflows/: junit_to_summary.py  python-tests.yml
acceptance/: .gitignore  NOTES.md  README.md  cucumber-report.html  cucumber.js  cucumber.mjs  jsconfig.json  package.json  playwright.config.ts  tsconfig.json
acceptance/api-library/: openapi-ts.config.ts  package.json  tsconfig.json
acceptance/features/: 01-multi-tenancy.feature  02-author-management.feature  03-customer-management.feature  04-music-stream-management.feature  05-stream-request-workflow.feature  06-stream-delivery-workflow.feature  07-author-payment-reporting.feature  08-end-to-end-workflow.feature
acceptance/steps/: api.steps.ts  author.steps.ts  customer.steps.ts  delivery.steps.ts  reporting.steps.ts  stream.steps.ts  (+1 more)
api/: generate.sh  openapi.yaml
csharp/: architecture.md
python/: .env.example  README.md  architecture.md  pyproject.toml  requirements.txt
python/.claude/: settings.local.json
python/app/: authors.py  common.py  config.py  database.py  exceptions.py  main.py  tenant_context.py
python/app/api/routes/: authors.py
python/app/database/: __init__.py  config.py  tenant_events.py
python/app/dependencies/: tenant.py
python/app/models/: __init__.py  author.py  base.py
python/app/repositories/: author_repository.py
python/app/schemas/: author.py
python/app/services/: author_service.py
python/tests/: conftest.py  test_tenant_scope.py
(+4 files in other folders)
